@@ -57,6 +57,7 @@ end
 
 class AuditLog < ActiveRecord::Base
   belongs_to :developer
+  belongs_to :unvalidated_developer, :class_name => 'Developer', :validate => false
 end
 
 DeveloperSalary = Struct.new(:amount)
